# BreadCalc

./: LICENSE  README.md  setup.cfg
src/BreadCalc/: __init__.py  app.py  plans.py  recipes.py
tests/: test_sourdough_bread.py
