[metadata]
name = BreadCalc
version = 0.0.1
author = Timo Jensen
author_email = ich@timo-jensen.de
description = Personal project fro stuff related to baking.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TimoRJensen/BreadCalc
project_urls =
    Bug Tracker = https://github.com/TimoRJensen/BreadCalc/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
